<resources>
    <string name="app_name">Lengua de Señas Mexicana</string>
    <string name="text_titulo">Lengua de Señas Mexicana</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_diccionario">Diccionario</string>
    <string name="button_juego">Juego</string>
    <string name="button_test">Prueba de Nivel</string>
    <string name="titulo_diccionario">Diccionario</string>
    <string name="titulo_menu">Menú Principal</string>
    <string name="titulo_juego">Juego</string>
    <string name="titulo_aleatorio">Aleatorio</string>
    <string name="filter_abecedario">Abecedario</string>
    <string name="filter_animales">Animales</string>
    <string name="filter_colores">Colores</string>
    <string name="filter_comida">Comida</string>
    <string name="filter_dias_meses">Fecha</string>
    <string name="filter_familia">Familia</string>
    <string name="filter_numeros">Números</string>
    <string name="filter_todos">Todos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_diccionario">DiccionarioActivity</string>
</resources>
