<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_diccionario"
            style="@android:style/Widget.Button"
            android:layout_width="@dimen/button_inicio_size"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/button_inicio_margin"
            android:background="?attr/colorPrimary"
            android:text="@string/button_diccionario"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/button_juego"
            style="@android:style/Widget.Button"
            android:layout_width="@dimen/button_inicio_size"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/button_inicio_margin"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/button_juego"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_test"
            style="@android:style/Widget.Button"
            android:layout_width="@dimen/button_inicio_size"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/button_inicio_margin"
            android:background="@android:color/holo_orange_light"
            android:text="@string/button_test"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
